--- a/challenge/experimentalist_benchmarking.ipynb
+++ b/challenge/experimentalist_benchmarking.ipynb
@@ -173,6 +173,7 @@
         "from autora.experimentalist.falsification import falsification_sample\n",
         "from autora.experimentalist.model_disagreement import model_disagreement_sample\n",
         "from autora.experimentalist.uncertainty import uncertainty_sample\n",
+        "from autora.experimentalist.autora_experimentalist_example import SampleExperimentalist\n",
         "\n",
         "# theorist\n",
         "from autora.theorist.bms import BMSRegressor\n",
@@ -404,11 +405,9 @@
         "\n",
         "  # this is just an example where we integrate the model diagreement sampler\n",
         "  # into the wrapper\n",
-        "  conditions = model_disagreement_sample(\n",
-        "          all_conditions,\n",
-        "          models = [models_bms[-1], models_lr[-1]],\n",
-        "          num_samples = num_samples\n",
-        "      )\n",
+        "  conditions = SampleExperimentalist(experiment_data, all_conditions,\n",
+        "          [models_bms[-1], models_lr[-1]]\n",
+        "          all_conditions, num_samples).sample()\n"
         "\n",
         "  return Delta(conditions=conditions)"
       ],
