fixed bug in ipynb

--- a/challenge/experimentalist_benchmarking.ipynb
+++ b/challenge/experimentalist_benchmarking.ipynb
@@ -406,7 +406,7 @@
         "  # this is just an example where we integrate the model diagreement sampler\n",
         "  # into the wrapper\n",
         "  conditions = SampleExperimentalist(experiment_data, all_conditions,\n",
-        "          [models_bms[-1], models_lr[-1]]\n",
+        "          [models_bms[-1], models_lr[-1]],\n",
         "          all_conditions, num_samples).sample()\n"
         "\n",
         "  return Delta(conditions=conditions)"
